src/snapshots/droid_tui__regression__visual_fader_column_snapshot@fader_column_mono_120_50.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                  DROID: fader_column                                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌────┐┌─────────┐┐
│ P8S…  M4 2    ││
▯○○○○○│▯ ▯  ▯ ▯ ││
▯▯▯▯▯▯│▯ ▯  ▯ ▯ ││
▯▯▯▯▯▯│▯ ▯  ▯ ▯ ││
▮▯▯▯▯▯│▯ ▯  ▯ ▯ ││
▮▯▯▯▯▯│▯ ▯  ▯ ▯ ││
▮▯▯▯▯▯│▯ ▯  ▯ ▯ ││
▮▯▯▯▯▯│▯ ▯  ▯ ▯ ││
│    ││▯ ▯  ▯ ▯ ││
│    ││▯ ▯  ▯ ▯ ││
□□□□□□│▮ ▯  ▯ ▯ ││
………………│▮ ▯  ▯ ▯ ││
│    ││▮ ▯  ▯ ▯ ││
│    ││▮ ▯  ▯ ▯ ││
│    ││▮ ▯  ▯ ▯ ││
│    ││▮ ▯  ▯ ▯ ││
│    ││▮ ▯  ▯ ▯ ││
│    ││▮ ▯  ▯ ▯ ││
│    ││▮ ▯  ▯ ▯ ││
│    ││▮ ▯  ▯ ▯ ││
│    ││         ││
│    ││         ││
│    ││○ ○  ○ ○ ││
│    ││O…O… O…O…││
│    ││         ││
│    ││         ││
│    ││         ││
│    ││         ││
│    ││         ││
│    ││○ ○  ○ ○ ││
│    ││         ││
│    ││         ││
│    ││         ││
│    ││         ││
└────┘└─────────┘┘
















































┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Renders degraded at 120 cols — use ≥ 516 cols or reduce scale | Scale: 1.0 | Ori│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
