src/snapshots/droid_tui__regression__visual_fader_column_snapshot@fader_column_mono_80_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────┐
│                              DROID: fader_column                             │
└──────────────────────────────────────────────────────────────────────────────┘
┌────┐┌─────────┐┐
│ P8S…  M4 2    ││
▮○○○○○│▮ ▯  ▯ ▯ ││
▮▯▯▯▯▯│▮ ▯  ▯ ▯ ││
▮▯▯▯▯▯│▮ ▯  ▯ ▯ ││
▮▯▯▯▯▯│▮ ▯  ▯ ▯ ││
▮▯▯▯▯▯│▮ ▯  ▯ ▯ ││
▮▯▯▯▯▯│▮ ▯  ▯ ▯ ││
▮▯▯▯▯▯│▮ ▯  ▯ ▯ ││
│    ││▮ ▯  ▯ ▯ ││
│    ││▮ ▯  ▯ ▯ ││
□□□□□□│▮ ▯  ▯ ▯ ││
………………│▮ ▯  ▯ ▯ ││
│    ││▮ ▯  ▯ ▯ ││
│    ││▮ ▯  ▯ ▯ ││
│    ││▮ ▯  ▯ ▯ ││
│    ││▮ ▯  ▯ ▯ ││
│    ││▮ ▯  ▯ ▯ ││
│    ││▮ ▯  ▯ ▯ ││
│    ││▮ ▯  ▯ ▯ ││
│    ││▮ ▯  ▯ ▯ ││
│    ││         ││
│    ││         ││
│    ││○ ○  ○ ○ ││
│    ││O…O… O…O…││
│    ││         ││
│    ││         ││
│    ││         ││
│    ││         ││
│    ││         ││
│    ││○ ○  ○ ○ ││
│    ││         ││
│    ││         ││
│    ││         ││
│    ││         ││
└────┘└─────────┘┘
















































┌──────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Renders degraded at 80 cols — use ≥ 580 │
└──────────────────────────────────────────────────────────────────────────────┘
