src/snapshots/droid_tui__regression__visual_graph_edge_kinds_colors_snapshot@graph_edge_kinds_classic_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                      DROID: graph_edge_kinds                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘




┌(unnamed)─────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
╭clocktool───────────╮                                                                             │
│                    │                                                                             │
│                    ●─┐  ╭osc─────────────────╮   ╭notesequencer───────╮     ╭vca─────────────────╮
│                    │ │  │                    │   │                    │     │                    │
╰────────────────────╯ └──◉                    ●───◉                    ●─────◉                    │
│                         │                    │   │                    │     │                    │
│                         ╰────────────────────╯   ╰────────────────────╯     ╰────────────────────╯
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│            ╭p2b8────────────────╮                                                                │
│            │                    │                                                                │
│            │                    │                                                                │
│            │                    │                                                                │
│            ╰────────────────────╯                                                                │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘





┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded graph_edge_kinds | Renders degraded at 100 cols — use ≥ 290 cols or reduce scale | latency │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
