src/snapshots/droid_tui__regression__visual_graph_edge_kinds_colors_snapshot@graph_edge_kinds_classic_240.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                            DROID: graph_edge_kinds                                                                                                           │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┌(unnamed)────────────────────────────────────────────────────────────────────────────────────┐┘
┌ Panels ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│ Graph ──────────────────────────────────────────────────────────────────────────────────────│┐
│◉◉┐                                                                                                                                           ││ ╭clocktool───────────╮                                                                      ││
│…0%                                                                                                                                           ││ │                    │                                                                      ││
││ │                                                                                                                                           ││ │                    ●                                                                      ││
││ │                                                                                                                                           ││ │                    │                       ╭notesequencer───────╮                         ││
││ │                                                                                                                                           ││ ╰────────────────────╯                       │                    │  ╭vca─────────────────╮ ││
││ │                                                                                                                                           ││                      │╭osc─────────────────╮┌◉                    ●┐ │                    │ ││
││ │                                                                                                                                           ││                      ││                    │││                    │└─◉                    │ ││
││ │                                                                                                                                           ││                      └◉                    ●┘╰────────────────────╯  │                    │ ││
││ │                                                                                                                                           ││                       │                    │                         ╰────────────────────╯ ││
││ │                                                                                                                                           ││                       ╰────────────────────╯                                                ││
│○○│                                                                                                                                           ││                                                                                             ││
│……│                                                                                                                                           ││                                                                                             ││
││ │                                                                                                                                           ││                                                                                             ││
││ │                                                                                                                                           ││                                                                                             ││
│○○│                                                                                                                                           ││                                                                                             ││
│○○│                                                                                                                                           ││            ╭p2b8────────────────╮                                                           ││
││ │                                                                                                                                           ││            │                    │                                                           ││
││ │                                                                                                                                           ││            │                    │                                                           ││
││ │                                                                                                                                           ││            │                    │                                                           ││
│○○│                                                                                                                                           ││            ╰────────────────────╯                                                           ││
│……│                                                                                                                                           ││                                                                                             ││
││ │                                                                                                                                           ││                                                                                             ││
││ │                                                                                                                                           ││                                                                                             ││
│○○│                                                                                                                                           ││                                                                                             ││
│○○│                                                                                                                                           ││                                                                                             ││
││ │                                                                                                                                           ││                                                                                             ││
││ │                                                                                                                                           ││                                                                                             ││
││ │                                                                                                                                           ││             ╭p2b8────────────────╮                                                          ││
││ │                                                                                                                                           ││             │                    │                                                          ││
││ │                                                                                                                                           ││             │                    │                                                          ││
││ │                                                                                                                                           ││             │                    │                                                          ││
│└─┘                                                                                                                                           ││             ╰────────────────────╯                                                          ││
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│─────────────────────────────────────────────────────────────────────────────────────────────│┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded graph_edge_kinds | Renders degraded at 240 cols — use ≥ 290 cols or reduce scale | latency avg 0.7 / max 1.0 (1 loop ≈ 190µs) | 0 back edge(s) | Scale: 1.0 | Orientation: Portrait                                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
