src/snapshots/droid_tui__regression__visual_graph_latency_backedge_snapshot@graph_latency_backedge_classic_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
┌(unnamed)─────────────────────────────────────────────────────────────────────────────────────────┐
│──────────────────────────────────────────────────────────────────────────────────────────────────│
╭p2b8────────────────╮                                                                             │
│                    │                                                                             │
│                    │                                                                             │
│                    │                                                                             │
╰────────────────────╯                                                                             │
│                                                                                                  │
│                                                      ╭lfo─────────────────╮                      │
│                                                      │                    │                      │
│                                                      ◉                    ●┐                     │
│                                                      │                    ││                     │
│                                                      ╰────────────────────╯│                     │
│                                                      │                     │                     │
│                                                      │                     │                     │
│                                                      │                     │                     │
│                                                      │                     │                     │
│                                                      │                     │                     │
│                                                      │                     │                     │
│                                                      │                     │                     │
│                                                      │                     │                     │
│                                                      │                     │                     │
│                                                      │                     │                     │
│                                                      │                     │                     │
│                                                      │                     │                     │
│                                                      │                     │                     │
│                                                      │                     │                     │
│                                                      │                     │                     │
│                                                      │                     │                     │
│                                                      │                     │╭contour─────────────╮
│                                                      │                     ││                    │
│                                 ╭button──────────────╮          ┌──────────└◉                    │
│                                 │                    │          │           │                    │
│                                 │                    ●──────────┘           ╰────────────────────╯
│                                 │                    │                                           │
│                                 ╰────────────────────╯                                           │
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | latency avg 0.0 / max 0.0 (1 loop ≈ 190µs) | 1 back edge(s) │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
