src/snapshots/droid_tui__regression__visual_graph_latency_backedge_snapshot@graph_latency_backedge_classic_120.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                             DROID: graph_latency_backedge                                            │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Panels ──────────────────────────────────────────────────────────────┐┌ Graph ───────────────────────────────────────┐
│◉◉┐                                                                   ││                                              │
│…0%                                                                   ││                                              │
││ │                                                                   ││                                              │
││ │                                                                   ┌(unnamed)──────────────────────────────────────┐
││ │                                                                   ││                                              │
││ │                                                                   ││                        ╭contour─────────────╮│
││ │                                                                   ││                        │                    ││
││ │                                                                   ││╭button──────────────╮┌─◉─────┐              ││
││ │                                                                   │││                    ││ │     │              ││
││ │                                                                   │││                 ┌──●┘ ╰────────────────────╯│
│○○│                                                                   │││                 │  │        │               │
│……│                                                                   ││╰────────────────────╯        │               │
││ │                                                                   ││                  │           │               │
││ │                                                                   ││                  │           │               │
│○○│                                                                   ││                  │           │               │
│○○│                                                                   ││                ╭lfo─────────────────╮        │
││ │                                                                   ││                │ │           │      │        │
││ │                                                                   ││                ◉─┘           └──────●        │
││ │                                                                   ││                │                    │        │
│○○│                                                                   ││                ╰────────────────────╯        │
│……│                                                                   ││                                              │
││ │                                                                   ││   ╭p2b8────────────────╮                     │
││ │                                                                   ││   │                    │                     │
│○○│                                                                   ││   │                    │                     │
│○○│                                                                   ││   │                    │                     │
││ │                                                                   ││   ╰────────────────────╯                     │
││ │                                                                   ││                                              │
││ │                                                                   └───────────────────────────────────────────────┘
││ │                                                                   ││                                              │
││ │                                                                   ││                                              │
││ │                                                                   ││                                              │
│└─┘                                                                   ││                                              │
└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded graph_latency_backedge | Renders degraded at 120 cols — use ≥ 290 cols or reduce scale | latency avg 0.0 / max │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
